--- a/toothdaily/src/main/res/values/strings.xml
+++ b/toothdaily/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
-<resources>
-    <string name="app_name">ToothDaily</string>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">Invisalign records</string>
     <string name="time_period_detail_title">2018/2/26</string>
     <string name="time_period_start_time_hint">Start Time:</string>
     <string name="time_period_end_time_hint">End Time:</string>
     <string name="time_period_notes_hint">Notes:</string>
+    <string name="title_activity_progress_list">Invisalign braces</string>
+    <string name="action_settings">Settings</string>
+    <string name="progress_index">No.<xliff:g id="progressIndex">%s</xliff:g>(<xliff:g id="dayCount">%s</xliff:g> Days)</string>
+    <string name="title_activity_tool">Invisalign data</string>
+    <string name="title_activity_daily_record">Daily Record</string>
+    <string name="title_activity_progress_detail">Progress Detail</string>
 </resources>
