--- a/toothdaily/src/main/res/values/strings.xml
+++ b/toothdaily/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_tool">Invisalign data</string>
     <string name="title_activity_daily_record">Daily Record</string>
     <string name="title_activity_progress_detail">Progress Detail</string>
+    <string name="progress_detail_item_day_index">Day <xliff:g id="dayIndex">%s</xliff:g></string>
 </resources>
