--- a/robin-support-recyclerview/src/main/res/values/strings.xml
+++ b/robin-support-recyclerview/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">robin-support-recyclerview</string>
     <string name="title_activity_robin_list">Robin List</string>
     <string name="action_settings">Settings</string>
+    <string name="ic_menu_title_export">export</string>
+    <string name="ic_menu_title_import">import</string>
 </resources>
