--- a/robin-support-recyclerview/src/main/res/values/strings.xml
+++ b/robin-support-recyclerview/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="ic_menu_title_export">export</string>
     <string name="ic_menu_title_import">import</string>
+    <string name="ic_menu_title_add">add</string>
 </resources>
