--- a/tooth-care/src/main/res/values/strings.xml
+++ b/tooth-care/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">toothcare</string>
     <string name="progress_record_day_index">No.<xliff:g id="progressIndex">%s</xliff:g> (<xliff:g id="dayCount">%s</xliff:g> Days)</string>
     <string name="daily_record_day_index">Day <xliff:g id="dayIndex">%s</xliff:g></string>
-    <string name="activity_label_progress_list">隐适美佩戴记录</string>
+    <string name="activity_label_progress_list">隐适美牙套记录</string>
     <string name="activity_label_daily_record_list">隐适美每日记录</string>
     <string name="activity_label_daily_record_detail">每日记录</string>
     <string name="progress_detail_title">隐适美 第<xliff:g id="progressIndex">%s</xliff:g>副</string>
     <string name="progress_detail_daycount_and_totaltime">你已经带了<xliff:g id="dayCount">%s</xliff:g>天，时长 <xliff:g id="totalTime">%s</xliff:g></string>
     <string name="activity_label_progress_detail">牙套</string>
+    <string name="activity_label_today">今天隐适美</string>
 </resources>
