--- a/tooth-care/src/main/res/values/strings.xml
+++ b/tooth-care/src/main/res/values/strings.xml
@@ -5,11 +5,15 @@
     <string name="activity_label_progress_list">隐适美牙套记录</string>
     <string name="activity_label_daily_record_list">隐适美每日记录</string>
     <string name="activity_label_daily_record_detail">每日记录</string>
-    <string name="progress_detail_title">隐适美 第<xliff:g id="progressIndex">%s</xliff:g>副</string>
-    <string name="progress_detail_daycount_and_totaltime">你已经带了<xliff:g id="dayCount">%s</xliff:g>天，时长 <xliff:g id="totalTime">%s</xliff:g></string>
     <string name="activity_label_progress_detail">牙套</string>
     <string name="activity_label_today">今天隐适美</string>
-    <string name="title_activity_all_in_one">AllInOneActivity</string>
+    <string name="activity_label_all_in_one">AllInOneActivity</string>
+
+    <string name="fragment_title_today">今天 No.<xliff:g id="progressIndex">%d</xliff:g>/<xliff:g id="dayInProgress">%d</xliff:g></string>
+
+    <string name="progress_detail_title">隐适美 第<xliff:g id="progressIndex">%s</xliff:g>副</string>
+    <string name="progress_detail_daycount_and_totaltime">你已经带了<xliff:g id="dayCount">%s</xliff:g>天，时长 <xliff:g id="totalTime">%s</xliff:g></string>
+
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,4 +23,7 @@
     <string name="drawer_nav_progress_list_title">牙套进度</string>
     <string name="drawer_nav_daily_record_list_title">隐适美每一天</string>
     <string name="drawer_nav_backup_title">备份数据</string>
+    <string name="fragment_title_progress_list">牙套</string>
+    <string name="fragment_title_daily_list">隐适美每一天</string>
+
 </resources>
