--- a/tooth-care/src/main/res/values/strings.xml
+++ b/tooth-care/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="activity_label_daily_record_detail">每日记录</string>
     <string name="activity_label_progress_detail">牙套</string>
     <string name="activity_label_today">今天隐适美</string>
-    <string name="activity_label_all_in_one">AllInOneActivity</string>
+    <string name="activity_label_all_in_one">隐适美牙套记录</string>
 
     <string name="fragment_title_today">今天 No.<xliff:g id="progressIndex">%d</xliff:g>/<xliff:g id="dayInProgress">%d</xliff:g></string>
 
