--- a/teeth-care/src/main/res/values/strings.xml
+++ b/teeth-care/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="menu_title_switch">切换</string>
     <string name="activity_label_main">隐适美</string>
     <string name="daily_detail_note_hint">备注</string>
+    <string name="menu_title_backup">备份</string>
 
 </resources>
